summative.moria.Moria.scala.error
Compilation error:
Moria:28: error: '(' expected but identifier found.
  if isFacingWall() {
     ^