summative.moria.Moria.scala.code
back();
  forward();
  while (true) {
		if (!isOverBaggle && !isCarryingBaggle) {
			forward();
    }
    else if (isOverBaggle && !isCarryingBaggle) {
      pickupBaggle();
      back();
    }
    else if (isCarryingBaggle && !isOverBaggle) {
			forward();
    }
    else {
      back();
			forward();
      dropBaggle();
      forward();
      
    }
  }
  right();forward();left();forward();


def finished(): Boolean = {
  var width:Int = getWorldWidth;
  var x:Int = getX;
  if isFacingWall() {
    return true
  }
  return false
}